objects/OF_Billing_Element_Verticale__c.object
<CustomObject>
    <fields>
        <fullName>Asset_Verticale__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset Verticale</label>
        <referenceTo>OF_Asset_Verticale__c</referenceTo>
        <relationshipLabel>Billing Elements Verticale</relationshipLabel>
        <relationshipName>Billing_Elements_Verticale</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Billing Elements Verticale</relationshipLabel>
        <relationshipName>Billing_Elements_Verticale</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Civico__c</fullName>
        <label>Civico</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Ordine_OLO__c</fullName>
        <label>Codice Ordine OLO</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comune__c</fullName>
        <label>Comune</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Attivazione__c</fullName>
        <label>Data Attivazione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ID_Building__c</fullName>
        <label>ID Building</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_DB_Scala_palazzina__c</fullName>
        <label>ID_DB_Scala_palazzina</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Risorsa__c</fullName>
        <label>ID Risorsa</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo__c</fullName>
        <label>Indirizzo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inviato_PostGreSQL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inviato_PostGreSQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_Status__c</fullName>
        <label>OF_Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_isLavorazione__c</fullName>
        <defaultValue>false</defaultValue>
        <label>OF_isLavorazione</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OLO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OLO</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Elements Verticale</relationshipLabel>
        <relationshipName>Billing_Elements_Verticale</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Palazzina__c</fullName>
        <label>Palazzina</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provincia__c</fullName>
        <label>Provincia</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regione__c</fullName>
        <label>Regione</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scala__c</fullName>
        <label>Scala</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Update_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update_Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDaBonificare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isDaBonificare</label>
        <type>Checkbox</type>
    </fields>
    <label>Billing Element Verticale</label>
    <nameField>
        <label>Billing Element Verticale Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Elements Verticale</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>